--- a/index.html
+++ b/index.html
@@ -122,10 +122,18 @@
     const formData = new FormData(form);
 
     try {
-      await fetch("https://script.google.com/macros/s/AKfycbwuUrDG495XvlcVK_-54ARj0aDti0KNawblulZtvAw_NgV4-7zGsdWhFbM_j5Xns_D2Pg/exec", {
+      const response = await fetch("https://script.google.com/macros/s/AKfycbwuUrDG495XvlcVK_-54ARj0aDti0KNawblulZtvAw_NgV4-7zGsdWhFbM_j5Xns_D2Pg/exec", {
         method: "POST",
         body: formData
       });
+
+      const resultText = await response.text();
+
+      if (resultText.includes("⚠️")) {
+        alert(resultText); // tampilkan peringatan duplikat
+        return;
+      }
+
       formContainer.style.display = "none";
       thankYou.style.display = "block";
     } catch {
